refactor: Lotto 자료형 List -> Set 변경으로 중복 제어